# thoth-core

./: .gitignore  CONTRIBUTING.md  COPYING  DEVLOG.md  INSTALL.md  Makefile.am  README.md  ROADMAP.md  SECURITY.md  configure.ac  genesis_miner.py
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: ax_boost_system.m4  bitcoin_qt.m4
build_msvc/: bitcoin_config.h  common.init.vcxproj
contrib/: README.md  build_wallet_arch.sh  install_db4.sh
depends/: README.md  description.md
doc/: CONSENSUS-AUDIT.md  EXPLORER-PLAN.md  LEGAL-NOTICE.md  PHASE1-PREP.md  PROJECT-STATUS.md  README.md  README_windows.txt  REST-interface.md  RUN-A-TESTNET-NODE.md  TESTNET-JOIN.md  WHITEPAPER-OUTLINE.md  WHITEPAPER.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-thoth.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  thoth-cli.1  thoth-qt.1  thoth-tx.1  thoth-wallet.1  thothd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  clientversion.cpp  init.cpp  net.cpp  netaddress.h  pow.cpp  txdb.cpp  validation.cpp
test/: README.md  get_previous_releases.py
(+259 files in other folders)
