dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=thothd.1
endif

if ENABLE_QT
  dist_man1_MANS+=thoth-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=thoth-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=thoth-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=thoth-wallet.1
endif
endif
